# QT

_QtCmakeTemplate/: CMakeLists.txt  main.cpp
